# ContestTrade

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_cn.md  README_en.md  _print_cfg.py  _run_and_export.py  _run_company.py  config.akshare.yaml  config.yaml  config_single.yaml  config_us.yaml  log_config.yaml  logger_README.md  pyproject.toml  requirements.txt
cli/: __init__.py  main.py  models.py  setup.py  utils.py
cli/export/: __init__.py  md_to_pdf.py
cli/static/: report_template.py  welcome.txt
contest_trade/: main.py  run_company_simple.py
contest_trade/agents/: __init__.py  data_analysis_agent.py  prompts.py  research_agent.py
contest_trade/config/: belief_list.json  config.akshare.yaml  config.py  config.yaml  market_config.yaml  market_config_us.yaml
contest_trade/contest/: judger_critic.py  judger_data_converter.py  judger_executor.py  judger_signal_judger.py  judger_weight_optimizer.py
contest_trade/data_source/: akshare_us_market.py  data_source_base.py  hot_money.py  hot_money_akshare.py  price_market.py  price_market_akshare.py  sina_news.py  sina_news_crawl.py  thx_news.py  thx_news_crawl.py  us_polygon_news.py  us_price_market.py
contest_trade/models/: __init__.py  base_agent_model.py  llm_model.py
contest_trade/tools/: aliases.py  corp_info.py  corp_info_akshare.py  corp_info_us.py  final_report.py  make_decision.py  price_info.py  price_info_akshare.py  price_info_us.py  search_web.py  stock_selector.py  tool_prompts.py  (+8 more)
single_symbol/: README_single_symbol.md  cli_single.py  single_symbol_signal.py
(+37 files in other folders)
